# nrz-cli

./: .gitignore  .onrezarelease.jsonc  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  commitlint.config.js  install.ps1  install.sh  lefthook.yml  npm-README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/auth/: mod.rs
src/cli/: db.rs  db_handler.rs  kv.rs  kv_handler.rs  mod.rs
src/deploy/: mod.rs
src/dev/: detect.rs  detect_tests.rs  inject.rs  inject_tests.rs  mod.rs  process.rs
src/emulator/: db.rs  kv.rs  kv_tests.rs  mod.rs  server.rs
src/upgrade/: mod.rs
tests/: cli_integration_test.rs  emulator_http_test.rs
