[package]
name = "nrz"
version = "0.1.0"
edition = "2024"
description = "ONREZA platform CLI — dev, build, deploy"
license = "MIT"

[lib]
name = "nrz"
path = "src/lib.rs"

[[bin]]
name = "nrz"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Emulator: D1-compatible SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# HTTP server (emulator)
axum = "0.8"

# HTTP client (deploy, API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Colors
console = "0.15"

# Errors
thiserror = "2"
anyhow = "1"

# URL handling (file:// URLs for NODE_OPTIONS)
url = "2"

# Unix signals (graceful shutdown)
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
